--- a/package.json
+++ b/package.json
@@ -39,12 +39,11 @@
     "express": "^4.19.2",
     "express-rate-limit": "^6.6.0",
     "express-winston": "^4.2.0",
-    "fast-xml-parser": ">=4.4.1",
+    "fast-xml-parser": "^4.4.1",
     "helmet": "^5.1.1",
-    "ip": "^2.0.1",
     "joi": "^17.6.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^6.5.4",
+    "mongoose": "^8.9.5",
     "socks": "^2.7.0",
     "validator": "^13.7.0",
     "winston": "^3.8.2"
@@ -53,7 +52,7 @@
     "eslint": "^8.22.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
-    "fast-xml-parser": ">=4.4.1",
+    "fast-xml-parser": "^4.4.1",
     "nodemon": "^3.1.3",
     "npm-force-resolutions": "^0.0.10"
   }
